cabal-version:      3.0
name:               dull
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ricardo Maurizio Paul
maintainer:         memaurifu14@gmail.com
category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Ast.Types
                      Ast.Parser
                      TypeSystem

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.17
                        , parsec >= 3.1
                        , containers >= 0.6
                        , mtl >= 2.2
    hs-source-dirs:   src
    default-language: GHC2021

executable dull
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >= 4.17
                        , containers >= 0.7
                        , dull
    hs-source-dirs:   app
    default-language: GHC2021
