cabal-version:      3.0
name:               dull
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE.md
author:             Ricardo Maurizio Paul
maintainer:         memaurifu14@gmail.com
category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Ast.Types
                      Ast.Parser
                      Ast.SemanticAnalysis
                      SymbolTable
                      TypeSystem
                      CompilationPipeline
                      Hir.Types
                      Hir.Translate

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.21
                        , parsec >= 3.1
                        , containers >= 0.7
                        , mtl >= 2.3
    hs-source-dirs:   src
    default-language: GHC2021

executable dull
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >= 4.21
                        , containers >= 0.7
                        , optparse-applicative >= 0.19
                        , dull
    hs-source-dirs:   app
    default-language: GHC2021
